[gd_scene load_steps=11 format=3 uid="uid://bgw6jol0dpw6a"]

[ext_resource type="Script" path="res://Game/Scripts/SpreadEnemy.gd" id="1_5y4ue"]
[ext_resource type="PackedScene" uid="uid://bfj75i0gn5ick" path="res://Game/OtherScenes/enemy_bullet.tscn" id="2_26c8j"]
[ext_resource type="Texture2D" uid="uid://br8fnqya4gq82" path="res://Game/Sprites/Space_Game_Enemy_Death_Sparks.png" id="3_7ndfh"]
[ext_resource type="Texture2D" uid="uid://dpgrhmt8tg1q7" path="res://Game/Sprites/SmallSpreadEnemy.png" id="3_gjm5s"]
[ext_resource type="Script" path="res://Game/Scripts/SetAnimationDefault.gd" id="5_v32hq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gaqru"]
atlas = ExtResource("3_7ndfh")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgclo"]
atlas = ExtResource("3_7ndfh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc0q5"]
atlas = ExtResource("3_gjm5s")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_b0sln"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaqru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgclo")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc0q5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sylvt"]
size = Vector2(15, 15)

[node name="SpreadEnemy" type="AnimatableBody2D" groups=["enemy_kill"]]
position = Vector2(100, -41)
script = ExtResource("1_5y4ue")
enemy_bullet = ExtResource("2_26c8j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_b0sln")
animation = &"death"
script = ExtResource("5_v32hq")

[node name="ShootLocation" type="Marker2D" parent="."]
position = Vector2(13, 0)
rotation = 3.14159

[node name="Area2D" type="Area2D" parent="."]

[node name="EnemyHitbox" type="CollisionShape2D" parent="Area2D" groups=["enemy_hitbox"]]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_sylvt")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="EnemyHurtbox" type="CollisionShape2D" parent="." groups=["enemy_hitbox"]]
shape = SubResource("RectangleShape2D_sylvt")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
